feat: add current user ID decorator and tenant entity support
- Implemented `CurrentUserId` decorator to retrieve user ID from request or CLS.
- Created `TenantEntity` to manage tenant-specific data with filtering.
- Added `Document`, `DocumentVersion`, `Workspace`, and `WorkspaceMember` entities with tenant support.
- Developed `DocumentController`, `DocumentService`, and `DocumentGateway` for document management.
- Introduced DTOs for document snapshot creation and version restoration.
- Enhanced `WorkspaceController` and `WorkspaceService` for workspace management and member invitations.
- Updated migrations to reflect new entity structures and relationships.
- Configured MikroORM for migration paths and environment handling.

--- a/package.json
+++ b/package.json
@@ -7,12 +7,12 @@
   "license": "UNLICENSED",
   "scripts": {
     "build": "nest build",
-    "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\" \"libs/**/*.ts\"",
+    "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
-    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
+    "lint": "eslint \"{src,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
@@ -40,8 +40,10 @@
     "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^11.0.1",
     "@nestjs/platform-fastify": "^11.1.11",
+    "@nestjs/platform-socket.io": "^11.1.12",
     "@nestjs/swagger": "^11.2.5",
     "@nestjs/throttler": "^6.5.0",
+    "@nestjs/websockets": "^11.1.12",
     "bcryptjs": "^3.0.3",
     "bullmq": "^5.66.5",
     "class-transformer": "^0.5.1",
