--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "bullmq": "^5.66.6",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.3",
+    "dayjs": "^1.11.19",
     "nestjs-cls": "^6.2.0",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
@@ -55,12 +56,14 @@
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.2",
     "uuid": "^13.0.0",
+    "y-protocols": "^1.0.7",
     "yjs": "^13.6.29"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.3.3",
     "@eslint/js": "^9.39.2",
     "@faker-js/faker": "^10.2.0",
+    "@mikro-orm/cli": "^6.6.5",
     "@nestjs/cli": "^11.0.16",
     "@nestjs/schematics": "^11.0.9",
     "@nestjs/testing": "^11.1.12",
