--- a/.env.test
+++ b/.env.test
@@ -6,3 +6,10 @@ DB_NAME=app_test
 
 JWT_SECRET=your_jwt_secret_key
 COOKIE_SECRET=your_cookie_secret_key
+
+GOOGLE_CLIENT_ID=your_google_client_id
+GOOGLE_CLIENT_SECRET=your_google_client_secret
+GOOGLE_CALLBACK_URL=http://localhost:3000/auth/google
+
+REDIS_HOST=localhost
+REDIS_PORT=6379
