feat: update package dependencies and add knip for linting
refactor: remove automatic migration execution on module initialization

feat(migrations): create new migration for user and whiteboard tables

chore(migrations): delete obsolete migration files

fix(mikro-orm): update configuration for seeder paths and file naming

feat(seeder): implement DatabaseSeeder for user creation

feat(factory): add UserFactory for generating user data

fix(auth.helper): update token generation to use new method

refactor(user.helper): streamline user creation process with factory

test(auth.controller): enhance tests for sign-up and refresh token functionality

test(documents.gateway): remove outdated document gateway tests

chore(test): clean up app setup by removing unused WebSocket adapter

chore(types): remove custom socket.io-client type definitions

--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "migration:create": "npx mikro-orm migration:create",
     "migration:up": "npx mikro-orm migration:up",
     "migration:down": "npx mikro-orm migration:down",
-    "migration:list": "npx mikro-orm migration:list"
+    "migration:list": "npx mikro-orm migration:list",
+    "knip": "knip"
   },
   "dependencies": {
     "@fastify/compress": "^8.3.1",
@@ -75,7 +76,7 @@
     "@nestjs/testing": "^11.1.12",
     "@types/express": "^5.0.6",
     "@types/jest": "^30.0.0",
-    "@types/node": "^22.10.7",
+    "@types/node": "^22.19.7",
     "@types/passport-google-oauth20": "^2.0.17",
     "@types/passport-jwt": "^4.0.1",
     "@types/passport-local": "^1.0.38",
@@ -85,6 +86,7 @@
     "eslint-plugin-prettier": "^5.5.5",
     "globals": "^17.0.0",
     "jest": "^30.2.0",
+    "knip": "^5.82.1",
     "prettier": "^3.8.1",
     "socket.io-client": "^4.8.3",
     "source-map-support": "^0.5.21",
