refactor: remove card factory and helper, add member and role factories and helpers
- Deleted card factory and helper files as they are no longer needed.
- Introduced new member factory and helper to streamline member creation and management.
- Added role factory and helper for role-related operations.
- Updated auth helper to support admin flag during user creation.
- Removed whiteboard controller tests and card controller tests, added members and roles controller tests.
- Implemented tests for member and role CRUD operations with appropriate permission checks.

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "migration:up": "npx mikro-orm migration:up",
     "migration:down": "npx mikro-orm migration:down",
     "migration:list": "npx mikro-orm migration:list",
+    "seeder:run": "npx mikro-orm seeder:run",
     "knip": "knip"
   },
   "dependencies": {
